# AgentCTRL

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
docs/: GOVERNANCE_REPUDIATION.md
examples/: bare_python.py  inbound_governance.py  langchain_tool.py  openai_function_call.py
src/agentctrl/: __init__.py  __main__.py  authority_graph.py  cli.py  conflict_detector.py  decorator.py  policy_engine.py  risk_engine.py  runner.py  runtime_gateway.py  types.py
src/agentctrl/adapters/: __init__.py  crewai.py  langchain.py  openai_agents.py
tests/: test_authority_graph.py  test_boundary.py  test_decorator.py  test_parity_features.py  test_pipeline.py  test_policy_engine.py  test_risk_engine.py
